# OTAnalysis

./: .coverage  .gitignore  .gitlab-ci.yml  MANIFEST.in  README.md  environment.yml  jhgfs  main.py  pyproject.toml  readthedocs.yml  setup.cfg  setup.cpf  setup.py  setup_logger.py
.github/workflows/: python-package-conda.yml  python-package.yml
OTAnalysis.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
Result/: output_16-06-2022_11-34-26.csv  output_16-06-2022_12-10-34.csv  output_17-06-2022_09-45-13.csv  output_17-06-2022_14-35-16.csv  output_17-06-2022_16-06-42.csv
compare/: compare_optical.py  compare_output_2022-04-11_14-55-40.csv_output_2022-04-11_14-56-13.csv  compare_result2.py
data_test/set_optical_effect/: b3c3-2021.06.07-15.00.35.722.jpk-nt-force
data_test/test/: b1c1-2021.06.07-14.28.30.039.jpk-nt-force  b1c1gg-2021.06.02-15.34.26.234.txt  b2c2g-2021.06.04-15.26.42.925.txt  b4c4-2021.06.07-15.05.45.485.jpk-nt-force  b6c6-2021.06.07-15.20.55.095.jpk-nt-force
docs/: conf.py  conf.py.save  index.rst  main.rst  modules.rst  otanalysis.controller.rst  otanalysis.model.rst  otanalysis.rst  otanalysis.tests.rst  otanalysis.view.rst  readme_link.rst  requirements.txt  software_test.rst  view.rst
documentation/: conf.py  index.rst  modules.rst  src.extractor.rst  src.tests.rst
otanalysis/: __main__.py  setup_logger.py
otanalysis/OTAnalysis.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
otanalysis/controller/: controller.py
otanalysis/extractor/: extractor_JPK.py  jpk_extractor.py
otanalysis/model/: class_curve.py  class_optical_effect.py  class_segment_curve.py  curve.py  optical_effect.py
otanalysis/otanalysis.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
otanalysis/tests/: test_controller.py  test_unitaire.py
otanalysis/view/: class_graph_view.py  class_view.py  info.py  mainview.py  toggle.py
result/: methods_2022-05-09_10-39-40.tsv  output_2022-05-09_10-39-40.csv
result_test/: .~lock.output_2022-04-11_14-55-40.csv#  .~lock.output_2022-04-11_14-56-13.csv#  methods_2022-04-11_14-55-40.tsv  methods_2022-04-11_14-56-13.tsv  output_2022-04-11_14-55-40.csv  output_2022-04-11_14-56-13.csv  output_2022-04-11_17-49-36.csv
set_test/: b8c4g-2017.11.16-13.45.11.096.txt
set_test/jpk_nt_force/: b3c3-2021.06.07-14.50.58.217.jpk-nt-force
set_test/set_optical_effect/: b1c1-2021.06.07-14.34.00.774.jpk-nt-force  b1c1gg-2021.06.02-15.34.06.018.txt
set_test/test/: b1c1-2021.06.02-15.30.30.294.jpk-nt-force  b2c2-2021.06.07-14.37.36.051.jpk-nt-force  b3c3-2021.06.07-14.49.37.602.jpk-nt-force  (+8 more)
src/: __init__.py  main.py
src/model/: class_curve.py  (+2 more)
tests/: test_curve.py
(+122 files in other folders)
