[metadata]
name = OTAnalysis
version = 0.2.71
author = Thierry GALLIANO (LAI)
author_email = thierry.galliano@etu.univ-amu.fr

license = GPL-3.0-only
description = Tools for extracting, analyzing and classifying optical tweezer data curves
long_description = file: README.md, Licence
long_description_content_type = text/markdown
url = https://github.com/TigiGln/OTAnalysis.git
classifiers = 
    Intended Audience :: Developers
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >= 3.8
include_package_data = True
package_dir = 
    = otanalysis
install_requires =
    numpy
    pandas
    scipy
    matplotlib
    PyQt5
    supyr-struct
    pathlib
    pytest
    

[options.packages.find]
where = otanalysis


