[metadata]
name = OTAnalysis
version = 0.2.72
author = Thierry GALLIANO (LAI)
author_email = thierry.galliano@etu.univ-amu.fr

license = GPL-3.0-only
description = Tools for extracting, analyzing and classifying optical tweezer data curves
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TigiGln/OTAnalysis.git
classifiers = 
    Intended Audience :: Developers
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir = 
    = otanalysis
install_requires =
    numpy
    pandas
    scipy
    matplotlib
    PyQt5
    supyr-struct
    pathlib
packages = find:
python_requires = >= 3.8
include_package_data = True
    

[options.extras_require]
dev =
    pytest
    pytest-cov
    sphinx
    sphinx-rtd-theme
    m2r2

[options.packages.find]
where = otanalysis

[options.entry_points]
console_scripts =
    python_ta = python_ta.__main__:main


